kubernetes/blog-cleaner/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-cleaner
  namespace: admin
spec:
  template:
    spec:
      containers:
        - name: blog-cleaner
          image: blog-cleaner:dev
