kubernetes/blog-cleaner/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-cleaner-ingress
  namespace: admin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.drones-shuttles.org
      http:
        paths:
          - path: /blog-cleaner(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: blog-cleaner
                port:
                  number: 80
